%%{init: {"themeVariables": {"fontSize": "12px"}, "flowchart": {"nodeSpacing": 20, "rankSpacing": 30, "useMaxWidth": false}}}%%
classDiagram
    %% Disenado para impresion A4 vertical.
    direction TB

    class Patient {
        <<Doctrine Entity>>
        -Uuid id
        -string name
        -string medicalHistoryNumber
        -DateTimeImmutable birthDate
        -string pathologies
        -string nutritionalGoal
        -bool activeStatus
    }

    class Measurement {
        <<Doctrine Entity>>
        -Uuid id
        -float weight
        -float height
        -float bodyFatPercentage
        -DateTimeImmutable takenAt
    }
    class Allergy {
        <<Doctrine Entity>>
        -Uuid id
        -string name
    }
    class DietaryPlan {
        <<Doctrine Entity>>
        -Uuid id
        -string name
        -DateTimeImmutable startDate
        -DateTimeImmutable endDate
        -int kcal
        -string observations
    }
    class DietDay {
        <<Doctrine Entity>>
        -Uuid id
        -int dayNumber
    }
    class Meal {
        <<Doctrine Entity>>
        -Uuid id
        -string name
        -DateTimeImmutable mealTime
    }
    class MealItem {
        <<Doctrine Entity>>
        -Uuid id
        -float quantity
        -string unit
    }
    class FoodItem {
        <<Doctrine Entity>>
        -Uuid id
        -string name
        -float kcalPer100g
        -array macros
        -string category
    }
    class ClinicalDocument {
        <<Doctrine Entity>>
        -Uuid id
        -string fileName
        -DateTimeImmutable ingestedAt
    }
    class DocumentChunk {
        <<Doctrine Entity>>
        -Uuid id
        -string content
        -string embedding
        -array metadata
    }
    class NutritionistProfile {
        <<Doctrine Entity>>
        -Uuid id
    }

    Patient "1" --> "0..*" Measurement : measurements
    Patient "0..*" --> "0..1" NutritionistProfile : assigned to
    Patient "0..*" -- "0..*" Allergy : allergies
    Patient "1" --> "0..*" DietaryPlan : dietary plans
    DietaryPlan "1" *-- "0..*" DietDay : diet days
    DietDay "1" *-- "0..*" Meal : meals
    Meal "1" *-- "0..*" MealItem : items
    MealItem "0..*" --> "1" FoodItem : food
    ClinicalDocument "1" *-- "0..*" DocumentChunk : chunks
    DietaryPlan "0..*" -- "0..*" DocumentChunk : RAG sources
